# daprs

./: .gitignore  Cargo.toml  README.md
daprs_core/: Cargo.toml
daprs_core/src/: error.rs  lib.rs  state.rs
daprs_derive/: Cargo.toml
daprs_derive/src/: lib.rs
daprs_derive/tests/: state.rs
examples/actix/: Cargo.toml  main.rs  model.rs  service.rs
examples/actix-state/: main.rs  model.rs  service.rs
examples/actix-subscriber/: main.rs  model.rs  service.rs
examples/actix/scripts/: post.sh  run.sh
examples/actix/src/: error.rs  main.rs  model.rs  service.rs
scripts/: actix-get.sh  actix-run.sh  actix-state-post.sh  actix-state-run.sh  actix-subscriber-publish.sh  actix-subscriber-run.sh
src/: actix.rs  error.rs  lib.rs  pubsub.rs  state.rs
