[package]
name = "daprs"
description = "Core library for Rust Dapr"
version = "0.1.0"
authors = ["Jack Wright <ayax79@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "^0.9"
http = "^0.1"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "^0.4"

[dev-dependencies]
actix-web = "^1.0"
uuid = { version = "^0.8", features = ["serde", "v4"]}
pretty_env_logger = "^0.3"
mime = "^0.3"