[package]
name = "daprs_actix_example"
version = "0.1.0"
authors = ["Jack Wright <ayax79@gmail.com>"]
edition = "2018"

[dependencies]
daprs_core = { path = "../../daprs_core" }
daprs_derive = { path = "../../daprs_derive" }
actix-web = "^1.0"
actix = "^0.8"
http = "^0.1"
uuid = { version = "^0.8", features = ["serde", "v4"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"